[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Minigames/MatchGame/MatchGame.gd" type="Script" id=1]
[ext_resource path="res://Game/Minigames/MatchGame/Dice.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.639216, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="MatchGame" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 500 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.0588235, 0.258824, 1 )

[node name="GameScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel1" type="ColorRect" parent="GameScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -120.0
margin_right = -140.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 90, 90 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )

[node name="Panel2" type="ColorRect" parent="GameScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -120.0
margin_right = 90.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 90, 90 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )

[node name="Panel3" type="ColorRect" parent="GameScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = -120.0
margin_right = 320.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 90, 90 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="GameScreen"]
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
margin_top = 163.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 1.0
value = 0.37
percent_visible = false

[node name="Label" type="Label" parent="GameScreen/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Time"
align = 1
valign = 1

[node name="StreakLabel" type="Label" parent="GameScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -10.0
valign = 2

[node name="ClickStealer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/CenterContainer"]
margin_left = 407.0
margin_top = 326.0
margin_right = 873.0
margin_bottom = 394.0

[node name="Label" type="Label" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_right = 466.0
margin_bottom = 14.0
text = "Click when at least two dices has same number,
bigger number is better, 6 6 6 is the best.
Some dots will not appear if you can't see."
align = 1

[node name="Button" type="Button" parent="StartMenu/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 466.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 50 )
text = "Begin"

[connection signal="gui_input" from="ClickStealer" to="." method="_on_Click"]
[connection signal="pressed" from="StartMenu/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
